--- a/ledelicedessens.html
+++ b/ledelicedessens.html
@@ -26,7 +26,10 @@
         </figure>
         <section>
             <h1>Le délice des sens</h1>
-            <i class="far fa-heart"></i>
+            <label id="favorite">
+                <input type="checkbox"  name="favorite"></input>
+                <i class="far fa-heart"></i>
+            </label>
             <form>
                 <fieldset>
                     <legend>ENTREES</legend>
