--- a/lapalettedugout.html
+++ b/lapalettedugout.html
@@ -10,7 +10,8 @@
     <link rel="stylesheet" href="fontawesome-free-5.15.1-web/css/all.css">
     <link rel="icon" type="image/svg" href="images/logo/ohmyfood@2x.svg">
     <link rel="stylesheet" href="resetstylesheet.css">
-    <link rel="stylesheet" href="menus.css">
+    <link rel="stylesheet" href="scss/menus.css">
+    <link rel="stylesheet" href="scss/responsivemenus.css">
 
 
 </head>
