--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
 
 <body>
     <header><a href="#"><img src="images/logo/ohmyfood.png" alt="Logo de l'entreprise" /></a></header>
-    <form action="controle.php" method="post">
+    <form>
         <div id="localisation">
-                <i class="fas fa-map-marker-alt"></i>            
-                <input type="text" placeholder="Paris, Belleville" id="city">
+            <i class="fas fa-map-marker-alt"></i>
+            <input type="text" placeholder="Paris, Belleville" id="city">
         </div>
         <h2>Réservez le menu qui vous convient</h2>
         <p>Découvrez des restaurants d'exception, sélectionnés par nos soins</p>
@@ -40,7 +40,7 @@
             <figure class="newrestaurant">
                 <img src="images/restaurants/palettedugout.jpg" alt="La Palette du goût">
                 <figcaption>
-                    <input type="checkbox" id="restaurant1"  name="restaurant1"></input>
+                    <input type="checkbox" id="restaurant1" name="restaurant1"></input>
                     <div class="description">
                         <h3>La Palette du goût</h3>
                         <p>Ménilmontant</p>
@@ -55,7 +55,7 @@
             <figure class="newrestaurant">
                 <img src="images/restaurants/noteenchantee.jpg" alt="La note enchantée">
                 <figcaption>
-                    <input type="checkbox" id="restaurant2"  name="restaurant2"></input>
+                    <input type="checkbox" id="restaurant2" name="restaurant2"></input>
                     <div class="description">
                         <h3>La note enchantée</h3>
                         <p>Charonne</p>
@@ -70,7 +70,7 @@
             <figure>
                 <img src="images/restaurants/alafrancaise.jpg" alt="A la française">
                 <figcaption>
-                    <input type="checkbox" id="restaurant3"  name="restaurant3"></input>
+                    <input type="checkbox" id="restaurant3" name="restaurant3"></input>
                     <div class="description">
                         <h3>A la française</h3>
                         <p>Cité Rouge</p>
@@ -85,7 +85,7 @@
             <figure>
                 <img src="images/restaurants/delicedessens.jpg" alt="Le délice des sens">
                 <figcaption>
-                    <input type="checkbox" id="restaurant4"  name="restaurant4"></input>
+                    <input type="checkbox" id="restaurant4" name="restaurant4"></input>
                     <div class="description">
                         <h3>Le délice des sens</h3>
                         <p>Folie-Méricourt</p>
