--- a/lapalettedugout.html
+++ b/lapalettedugout.html
@@ -31,7 +31,7 @@
                 <input type="checkbox"  name="favorite"></input>
                 <i class="far fa-heart"></i>
             </label>
-            <form action="controle.php" method="POST">
+            <form>
                 <fieldset>
                     <legend>ENTREES</legend>
                     <ul>
@@ -144,9 +144,9 @@
     </main>
     <footer>
         <h1>Ohmyfood</h1>
-        <ul>
-            <li><a href="#"><i class="fas fa-utensils"></i> Proposer un restaurant</a></li>
-            <li><a href="#"><i class="fas fa-hands-helping"></i> Devenir partenaire</a></li>
+        <ul class="fa-ul">
+            <li><a href="#"><span class="fa-li"><i class="fas fa-utensils"></i></span>Proposer un restaurant</a></li>
+            <li><a href="#"><span class="fa-li"><i class="fas fa-hands-helping"></i></span>Devenir partenaire</a></li>
             <li><a href="#">Mentions légales</a></li>
             <li><a href="#">Contact</a></li>
         </ul>
