final after validation

--- a/index.html
+++ b/index.html
@@ -40,14 +40,11 @@
             <figure class="newrestaurant">
                 <img src="images/restaurants/palettedugout.jpg" alt="La Palette du goût">
                 <figcaption>
-                    <input type="checkbox" id="restaurant1" name="restaurant1"></input>
                     <div class="description">
                         <h3>La Palette du goût</h3>
                         <p>Ménilmontant</p>
                     </div>
-                    <label for="restaurant1">
-                        <i class="far fa-heart"></i>
-                    </label>
+                        <div class="heart"><i class="far fa-heart"></i></div>
                 </figcaption>
             </figure>
         </a>
@@ -55,14 +52,11 @@
             <figure class="newrestaurant">
                 <img src="images/restaurants/noteenchantee.jpg" alt="La note enchantée">
                 <figcaption>
-                    <input type="checkbox" id="restaurant2" name="restaurant2"></input>
                     <div class="description">
                         <h3>La note enchantée</h3>
                         <p>Charonne</p>
                     </div>
-                    <label for="restaurant2">
-                        <i class="far fa-heart"></i>
-                    </label>
+                        <div class="heart"><i class="far fa-heart"></i></div>
                 </figcaption>
             </figure>
         </a>
@@ -70,14 +64,11 @@
             <figure>
                 <img src="images/restaurants/alafrancaise.jpg" alt="A la française">
                 <figcaption>
-                    <input type="checkbox" id="restaurant3" name="restaurant3"></input>
                     <div class="description">
                         <h3>A la française</h3>
                         <p>Cité Rouge</p>
                     </div>
-                    <label for="restaurant3">
-                        <i class="far fa-heart"></i>
-                    </label>
+                        <div class="heart"><i class="far fa-heart"></i></div>
                 </figcaption>
             </figure>
         </a>
@@ -85,14 +76,11 @@
             <figure>
                 <img src="images/restaurants/delicedessens.jpg" alt="Le délice des sens">
                 <figcaption>
-                    <input type="checkbox" id="restaurant4" name="restaurant4"></input>
                     <div class="description">
                         <h3>Le délice des sens</h3>
                         <p>Folie-Méricourt</p>
                     </div>
-                    <label for="restaurant4">
-                        <i class="far fa-heart"></i>
-                    </label>
+                        <div class="heart"><i class="far fa-heart"></i></div>
                 </figcaption>
             </figure>
         </a>
