--- a/alafrancaise.html
+++ b/alafrancaise.html
@@ -28,7 +28,7 @@
         <section>
             <h1>A la française</h1>
             <label id="favorite">
-                <input type="checkbox"  name="favorite"></input>
+                <input type="checkbox"  name="favorite">
                 <i class="far fa-heart"></i>
             </label>
             <form>
