--- a/lanoteenchantee.html
+++ b/lanoteenchantee.html
@@ -29,7 +29,7 @@
         <section>
             <h1>La note enchantée</h1>
             <label id="favorite">
-                <input type="checkbox"  name="favorite"></input>
+                <input type="checkbox"  name="favorite">
                 <i class="far fa-heart"></i>
             </label>
             <form>
