--- a/lapalettedugout.html
+++ b/lapalettedugout.html
@@ -28,7 +28,7 @@
         <section>
             <h1>La palette du goût</h1>
             <label id="favorite">
-                <input type="checkbox"  name="favorite"></input>
+                <input type="checkbox"  name="favorite">
                 <i class="far fa-heart"></i>
             </label>
             <form>
