--- a/ledelicedessens.html
+++ b/ledelicedessens.html
@@ -28,7 +28,7 @@
         <section>
             <h1>Le délice des sens</h1>
             <label id="favorite">
-                <input type="checkbox"  name="favorite"></input>
+                <input type="checkbox"  name="favorite">
                 <i class="far fa-heart"></i>
             </label>
             <form>
